fix: center align Tag

--- a/draft-packages/title-block/KaizenDraft/TitleBlock/TitleBlock.scss
+++ b/draft-packages/title-block/KaizenDraft/TitleBlock/TitleBlock.scss
@@ -173,7 +173,7 @@
 
 .textContainer {
   display: flex;
-  align-items: baseline;
+  align-items: center;
 }
 
 .tag {
